# solar

./: Cargo.toml  defs.yaml
src/: alternatives.rs  consumption.rs  main.rs  plant.rs  reference.rs  site.rs
